--- a/file.html
+++ b/file.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head> 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
 <body>
+<header class="header">
+<nav class="navbar navbar-style">
+    <div class="container">
+        <div class="navbar-header">
+            <a href=""><img class="logo" src="logo.png"></a>
+        </div>
 
-<h1>My First Heading</h1>
+    </div>
 
-<p>My first paragraph.</p>
-
+</nav>>
+<h1>Motel</h1>
+<p>Welcome, these are some photos of our motel, and what we offer.</p>
+</header>
 </body>
 </html>
