--- a/file.html
+++ b/file.html
@@ -4,20 +4,30 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <header class="header">
 <nav class="navbar navbar-style">
     <div class="container">
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a href=""><img class="logo" src="logo.png"></a>
         </div>
-
+            <ul class="nav navbar-nav">
+                <li><a href="">Home</a></li>
+                <li><a href="">Photos</a></li>
+                <li><a href="">Bookings</a></li>
+                <li><a href="">Location and Information</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
     </div>
 
-</nav>>
-<h1>Motel</h1>
-<p>Welcome, these are some photos of our motel, and what we offer.</p>
+</nav>
 </header>
 </body>
 </html>
