--- a/file.html
+++ b/file.html
@@ -11,13 +11,14 @@
 <nav class="navbar navbar-style">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#micon">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a href=""><img class="logo" src="logo.png"></a>
         </div>
+        <div class="collapse navbar-collapse" id="micon">
             <ul class="nav navbar-nav">
                 <li><a href="">Home</a></li>
                 <li><a href="">Photos</a></li>
@@ -26,8 +27,19 @@
                 <li><a href="">Contact Us</a></li>
             </ul>
     </div>
-
+</div>
 </nav>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <h1>Elk Run Inn</h1>
+            <p>Stay with us! We are a small Inn in northwest Colorado. Each of our rooms has a kitchenette in it for added comfort!</p>
+        </div>
+        <div class="col-sm-6">
+            <img src="hotel.png" class="img-responsive" alt="hotel outside">
+        </div>
+    </div>
+</div>
 </header>
 </body>
 </html>
