--- a/file.html
+++ b/file.html
@@ -38,6 +38,18 @@
         <div class="col-sm-6">
             <img src="hotel.png" class="img-responsive" alt="hotel outside">
         </div>
+        <div class="col-sm-6">
+            <img src="room1.png" class="img-responsive" alt="First room">
+        </div>
+        <p>This is an example of our single Queen room</p>
+        <div class="col-sm-6">
+            <img src="kitchen.png" class="img-responsove" alt="Example of kitchen in rooms">
+            <p>This is an example of what the kitchens in our rooms look like!</p>
+            <div class="col-sm-6">
+                <img src="room2.png" class="img-responsive" alt="Room decor">
+                <p>Our rooms have a cabin type of setting to them this is another example!</p>
+            </div>
+        </div>
     </div>
 </div>
 </header>
