--- a/file.html
+++ b/file.html
@@ -33,7 +33,8 @@
     <div class="row">
         <div class="col-sm-6">
             <h1>Elk Run Inn</h1>
-            <p>Stay with us! We are a small Inn in northwest Colorado. Each of our rooms has a kitchenette in it for added comfort!</p>
+            <h3>Contact us for booking: (970) 826-4444</h3>
+            <p>Stay with us! We are a small Inn in northwest Colorado. We are a cabin themed motel and the area is great! Each of our rooms has a kitchenette in it for added comfort!</p>
         </div>
         <div class="col-sm-6">
             <img src="hotel.png" class="img-responsive" alt="hotel outside">
